Changing tomcat memory options in vagrant